Adds additional setup

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,8 @@
             "cwd": "${workspaceRoot}",
             "environment": [],
             "console": "integratedTerminal",
-            "preLaunchTask": "cargoBuild"
+            "preLaunchTask": "cargoBuild",
+            "postDebugTask": "openResult",
         },
     ]
 }
