--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-image = "0.25.1"
+image = "0.25.5"
 indicatif = "0.17.3"
 rand = "0.8.5"
 rayon = "1.10.0"
+
+[profile.release]
+debug = true
