--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ image = "0.25.5"
 indicatif = "0.17.3"
 rand = "0.8.5"
 rayon = "1.10.0"
+
+[profile.release]
+# Set debug to true when profiling the code
+debug = false
